# Heart-Disease-Detection-ML

./: CMakeLists.txt  CSVData.cpp  CSVData.h  dataSet.h  main.cpp
Level3 EDA/: diagrama.drawio
Level3 EDA/Level3-Heart-Disease-Prediction-ML/: CMakeLists.txt
Level3 EDA/Level3-Heart-Disease-Prediction-ML/Level3-Heart-Disease-Prediction-ML/: CMakeLists.txt  entropy.h  level3.h  main.cpp  subset.cpp  subset.h
Level3Eda-HeartDiseaseDetection/: CMakeLists.txt
Level3Eda-HeartDiseaseDetection/Level3Eda-HeartDiseaseDetection/: CMakeLists.txt  CSVData.cpp  CSVData.h  dataSet.cpp  dataSet.h  entropy.cpp  entropy.h  field.cpp  field.h  level3.h  main.cpp  subset.cpp  subset.h
